# internal/alias/model.go
@@ -1,0 +1,11 @@
+package imagealias
+
+import "time"
+
+type Alias struct {
+	ID        string
+	Path      string
+	ImageID   string
+	Source    string
+	CreatedAt time.Time
+}
